dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=camcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=camcoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=camcoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=camcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=camcoin-wallet.1
endif
endif
